Version 7.0.0
- Added Spin2 structures (basically small objects)
- Added BOOL debug modifier for -g
- Added some of the v44 Spin2 builtin methods like byteswap 

Version 6.9.8
- Fix `#foo+CONST` calculation

Version 6.9.7
- Fixed infinite loop when CORDIC and Read/Write optimizations fight
- Fixed potential crash when compiling empty functions
- Allow `#foo+CONST` for inline assembly when `foo` is a HUB label

Version 6.9.6
- Added a peephole for some address calculations (as suggested by Evan)
- Fixed some built-in functions in spin2cpp

Version 6.9.5
- Fixed immediate ranges for load/store, and made out of range immediates an error (thanks to Ada)
- Fixed an inappropriate memory forwarding with WZ (also thanks to Ada)
- Made sure arrays of bytes are put into memory, even if inside structs or unions

Version 6.9.4
- Fixed a use of uninitialized memory on 32 bit platforms
- Skip running compression & similar passes when there are errors

Version 6.9.3
- Fixed typo in datetime
- Ignore ' style comments in #define definitions

Version 6.9.2
- Fixed $ relative ORGF (thanks, Ada)
- Fixed annoying error spam with bad instructions when -l given
- Fixed a missing type check which caused vfscanf() to fail to compile
- Fixed incorrect conversion of multiplication into shifts in nucode
- Fixed alignment requirements for boolean types

Version 6.9.1
- Fixed initialization of boolean types
- Fixed several bugs around booleans
- Reduced storage size required for boolean types (in most cases)

Version 6.9.0
- Added new optimization to merge duplicate functions (only at -O2, and so far only works for small functions)
- Extract side effects in more cases to avoid errors with ++,-- in complex expressions
- Fixed some nucode compilation problems with the C test suite
- Fixed failure to allocate memory for local variables in some cases
- Fixed incorrect removal of some functions that were not completely inlined
- Fixed sizeof() for boolean types